@@ -3,34 +3,30 @@ Hash: SHA256
 
 DIST armadillo-3.4.4.tar.gz 3006964 SHA256 ef94e12556421fa62ba7734f8b18bb12c188f43dd6192d3648a28e8d154e6ba7 SHA512 78fbb107b220d283a2404483ee38720fd8259bbf675d8753d706cc3c3ba9678d47412d156f24a4b3cc95e20ce3c935167e2f7657806b5b8e8b7c95938c4b3f3f WHIRLPOOL 2a1b6426b695569c10b13d3df1183c615fdb4261497eea405e61316a838a5744477db7bfd8344f25d741e69899f64a19c801bd068d366175a2c9898369090093
 DIST armadillo-3.6.2.tar.gz 3016818 SHA256 04f64c632e619989616c7f219310a06cb1618b16274bdac05b4798d49eb4f149 SHA512 0c769caad012f7893cc8ebb46969179f1175edac638f98fd2a0898aed062f7456536eecd12c9720f77caf4859cd0049e00dd71c9f096458b5fd5ce9cea517c66 WHIRLPOOL 898c29f7d0a7b02658f8d95a528be7d321a7d15f95ada6a4296d9822ee873556a49ccaafcaca16cb25e4a05321fa91b9711d7790b0910464b653398fb6ce4738
-DIST armadillo-4.600.4.tar.gz 5347594 SHA256 308835440ce3b17d7652156bad6c9fbc6f6881859e07467623676d4a35229ca8 SHA512 a7378e2fe5a4485f5df755cd3af9e54034f1a701bd185161a9945422598dd7e20327cf945075bca71d31a18eaf9f932ff39f204e96a48855ef013a962dd07fd8 WHIRLPOOL 2c0544a243f5632445a740148dfd4266a20815c017aa0f52dd20ac5c6ab9531da7ad388605c136fdacf254b724648ab0f7a0354554b85af1ed82be21f5e0ea6b
-DIST armadillo-4.650.2.tar.gz 5351466 SHA256 380b9e9a6fa67e917a79a46cbf04ec169ea598932cfeb59c9f1eaf7485f14711 SHA512 a4f6cb3f4d7e4dfbf75d0a3bb758a10f2206902fd11dd7bc60d618d2af1327d746d5fbb35e7f2160cc66c96af70d42a160ce34ca0735a422cf7c56fbd5c0a456 WHIRLPOOL 1c7346dd8b6c439dc611fddd3faf27ed1068194187ec3c8faea5ed5e45ae6143d57fa7e6571190b5a1a661b51dd0852d2641be752efedda00a22de7de589c755
 DIST armadillo-4.650.4.tar.gz 5408567 SHA256 ccc56580ec932ec9beade5679b07ecbed889e9b602866f673d1a05a7692b4bf8 SHA512 a548150ba5484fce35b0bc6023982939946f2f00b733dff2cd5b46101b1c344342061389cb4363cdaa04c5e3cca3278a40febe2ed705316552dd71f841c46037 WHIRLPOOL 331493d8b9c92b9e1908880c6f6510edb12e93193a9ceb77d0b8ce9d0bfb493dc48e590ea949d39c3c19f6fc3b05446b7e00525512e3055be0f907427c28f7d4
 DIST armadillo-5.100.2.tar.gz 5429961 SHA256 63150f12bf7c7c598ea55b7271d99fce349ff386a3dc2cae3904b244f6e35320 SHA512 2777b525bc62daddfb16eae7b74c29b6b695a7985c56d9dca727ae1e13aa4ea20ee85ea82233a5310b37c738838af07bb0fa7eea782e68e72cbe1cf46a0cc896 WHIRLPOOL df85a508875587651b187520b78900634402f2ca0fc2e64f43bd4a793e382e8cc6abd5b988267645bb02b3133d9aa99ab6d6ff5e200d1277093d4f7ce6e9d240
 EBUILD armadillo-3.4.4.ebuild 1266 SHA256 2d771791965f7e24e57628042a03e1494ecc0d815071265fa067bbc7c5537e89 SHA512 7d6774f5555a024cf4e7a62114f2fcdef678eaa47adbd6eae01a59890e5ecf7fa36722be1072ad8220072f9a5e047e494fd85ed2f8ba794632f6ced22ddcddc5 WHIRLPOOL 6cb4003de7bbd8eb2b3b78beb1403e11ead745d3f991450be514ab8435465987908c5200a4981eab7283f6927714083c13369a2caff62c98b93b36d1d6119960
 EBUILD armadillo-3.6.2.ebuild 1278 SHA256 6af0ef777d295f5825700fb3ae4d7fc0faa9e1ecf58438e65301584110cacbb3 SHA512 8b4e3abaaebe3d90aab80d1762f8ab1cb68035f11ffa974679289fa9776e744d705f83ba8740dd2cc970622f910a7d565e9f823ea96f6e05830f9c848c1cddde WHIRLPOOL 3834e7d60ba2b1cf16a0abe2deac6e481201fcd4f45ae6368d50e7d29c5db2b0a842c9948a0b78d4187d61c91e65e785d84ef812440452e8d69ed1932fb5962d
-EBUILD armadillo-4.600.4.ebuild 2382 SHA256 9fc5a5dec63181b0865f87ca6349d6779c0d72e9283d1b266a68c888e1579a84 SHA512 8d854183b0221959ab0d3d5df56d9476f5553e9a74c75c719cd3536277e32c7f85dcab0132fb5a8a0ebe4813147204e4e997c43e77e9797c400040c93af9bced WHIRLPOOL e0fffa2097965d902ead72ed8b8dd79e2873a50f8e19f9732509fa85cb36322152417e23a796b5335149f255f275f60b67e975c8770238776356b070fcf97019
-EBUILD armadillo-4.650.2.ebuild 2382 SHA256 66b2e370de79c133386614defde781d666c0705fe9224a28b1c974c1f5c9ab62 SHA512 4d7f95b444d8928156242de40c206b677a4a302a3a9da420c3699c33e701232f99b720fb19257767f1390e3dae68141d40dfed7ef94a7b2a604df61b27c0dfe2 WHIRLPOOL ac6281d8ceeeddf88f4fa7890e4b153aca39a57b35bd8f9dcfc815a91ed09c11c5c0e8f0e556ad50bbce374b87ae69f32965d485af1ca4f81ca831db23a30d23
 EBUILD armadillo-4.650.4.ebuild 2926 SHA256 b979980a23aa99584e98f11733f9e35d9ebd02ecd1b049e4b95cdcf7d78f887c SHA512 9998675a6b8801fe053d8debaf98a1757ad1b4c3bb04ee4e42d5dacd6c4300a1be64ab71dcbb390c5d261ede7f60d52fcb0f70d8edd192f78b184090b59b1194 WHIRLPOOL 667f8f2ca6aebc8bf24eee767fcf5937c8d2cfba4a42493023f10f0eca7d1e4b8b98f2985c59cb38f367a75ebc8b5f28e3ae28b24661ece3b549e054dd1b6f08
 EBUILD armadillo-5.100.2.ebuild 3104 SHA256 b16b3af5da42e25db0faf4b8eaa476a7ffacd3b9fcde7349b2067f2bf389520f SHA512 fe0cceb9b206f81643ea9def1fb3245e54cc8f479a3e25a94ca84a3e9a36a4ac5cf7e02baf738b5f9c5a7ffdb0a8d13fad351cf42303a8532d176bb26dae271d WHIRLPOOL 1967c8803903e85e65e13efe8713c20a005ddde4f866c74bce56e00bf62b79822beea5800c20f2da0ea0c7fd1232f68750b4796195691070ec0505094ed7f775
-MISC ChangeLog 5822 SHA256 c84be69b1cd9ca81d65c495bec65c4d7fbb92b0d3ec6cd9d6b7576a278e933e2 SHA512 e37f31d4aa5b2ff925854e0914a02d15a00576ed962de6b1cf5df3a478905bc222174560031e979597ceccba0babacd32f9f29e60516f3984c674961b6131cec WHIRLPOOL 26e3dd079b9c226b4e0ac9dc451c3b2bbaccf9e36e2d7a3afdafb6067e9de0ddb8bedc6aa81d3bc4fcb77ee8eb323104d6a30567657d8c2c5d9468a311c456e5
+MISC ChangeLog 5949 SHA256 1d41d0576f1e54085fc7766098d5114dc7cbb8227e1de68412beaaf925e2b7c8 SHA512 c277d56ff690ef340f88fc11afa699bcecec86b6b0ce99399bd2e5332d0ea62fcad9bc84203f91ccad4b6d82cb15fcc587899b2c4cfc5103599c6dde14ef1892 WHIRLPOOL 9b1d0bdc400516ffa6f25940fa2a55cdde0748956db27447ae12448842ec6aa23c24175bdeeb81e711625e596258183027f826295522cb3b57cd52c15cee92c5
 MISC metadata.xml 1342 SHA256 b6594c9a4514f0d7dde98e9abb49b63fe711818afb750eba9910b81b4fec80cf SHA512 5cfba9dde13cb8760866b235663ebf8693d3c28fc4629d226385829d751f23dbcba09448d0ff383953ef545121e61e02edfa846c457ec4e2de02f67e96b45d08 WHIRLPOOL 1983fb8be8841f6acd7d11b317e84c1b90ca465c36e9704641628eada67ff2cb32d2cd334c18a730bff159141587097691ce4db5fca3b79369d9d096740a890a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVXfyZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVXfzoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMkRCMDNGRDg4MkUwQTczOTgwMkE3RUEx
-RjU1NzRDRUExQkE5Mjk1AAoJEB9VdM6hupKVCJAQAKyxslZ4GIdj6uDp7cQT4cOv
-bOBeU+mWcVXXMyjhISmqz364fFr+yrmF7pMLWMEq6psIKwJzYYXjYj2R4WVVahcP
-VnZkOd3HInmS+HJEhdSbuGqfnz3kerFYB8RUD4R5Wu/GkP6vLd+5WCxuJyZDut90
-YXefMpN0rspLwSPv8SulT86O8gtLIlotqU3tgIFC+x6XSbj4FTQm1RPat+co2tvY
-x3war8tC7TbtJqR1zd4IwzNv9AXNFSrcaZjrQQ6b/8Ncnah3FfdaGoH8KJLpx7q8
-jHmZ142lo0aBC28YY51F/nQ0THvbDWnRn7/wgQenaVUY0pI04dNOp1gGeWSqsy3F
-qIIMjm8C1NCjYZiZIpoObU7OYKEr8ZgoKznI++QvAYIjhw1uIp/m4+GjmGJ9c+Rs
-gy+28rbIsXcI5GTuxT9FEu2TTkdDTVJHEVegvRhNbcq69rHQaSVMVYxm7OTXpmfy
-uScvd+cmITIVD219m3GOc+cuBNRtplTfbHpjwKMYYKjkcta4S4Dzw9U7k6p1e8HT
-OKs6bXKJbIJY0zswWdEMbiXEoG9Ki/uuJYSEGXG5uiwr2eYjiO9IKbQZOZvejTf/
-5Q0jGQ6pl9LQQ/JfT6zrAg3yVRAzqgHhdHir4ZDObRdeMbmo/RaN4l7shzKaucZ+
-vLVlydNtdeMtUr0ZBFgE
-=8CXD
+RjU1NzRDRUExQkE5Mjk1AAoJEB9VdM6hupKVakcQAIcE7OfeDlHoFJtTMSDwDWFD
+msgIPLF9soLE6kFYVDprSJ2TBIHu6XBlHCKt/VnloWKjgMaiGNvsefAJSsz0ilgb
+nCskJ4rRa6Fd8cAW3ShmGXDKh/1j8in7EJ8f0fBAizt7+HX0mIOOo9rE/RomvqZC
+f5eNXQ2U9E43Kuz7j5BNMpL0l4YJTfx372ke6GQ3UG1dcUUQu2K+RALZ2AclWGRc
+TBH2OLK7pCwImg6rR0Wa4jZSDrQJFHEH4UlcpyRTKUHgf72/VJC9PBrPJSbY854/
+2I+B4n/cDqfEz5fsbuusltGh5Gu/GUgIcbW0sQYrDT71S01zxGOFpR4aDqBZys2H
+fuSn3CwYMBXjvPxEZL8w4OzI0lCshom6JKLCkJ1kd90VvbdwWnfbUilvp6qJsyaS
+wZkqPif5aU8DQZXhk+ca0opB7Mq5+OmxifYAXUOzPUQXnrep1+cXVBHNahm8a/9R
+RZdOuQohZC1YjZZwEh9VyAMqLjRRME2uT8zsTMZ2PBW/4znsO5OeifponwW0pqfA
+CU/i7+5nkMfM3jVpuCBwmCCrZFOXw/xpl/K4eF6UicIoJ6NCLUytDKbduaLDkezg
+ajWUoLEGvmusdXi3BY4Umuh1IHEs27TIiBFSGKMSFkIxgrjzRXXRHtYTomJUgOAC
+aqFznu9H79L0ZjW7hfJn
+=BYS3
 -----END PGP SIGNATURE-----
