@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/armadillo
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/armadillo/ChangeLog,v 1.34 2015/05/21 15:46:31 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/armadillo/ChangeLog,v 1.35 2015/05/21 15:47:50 dilfridge Exp $
+
+  21 May 2015; Andreas K. Hüttel <dilfridge@gentoo.org>
+  -armadillo-4.600.4.ebuild, -armadillo-4.650.2.ebuild:
+  Remove old
 
 *armadillo-5.100.2 (21 May 2015)
 
